--- a/package.json
+++ b/package.json
@@ -4,32 +4,34 @@
     "description": "Servidor MQTT para máquina expendedora conectado a PostgreSQL",
     "main": "src/index.js",
     "scripts": {
-      "start": "node src/index.js",
-      "dev": "nodemon src/index.js",
-      "setup-db": "node scripts/setup-db.js",
-      "test": "jest"
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js",
+        "setup-db": "node scripts/setup-db.js",
+        "test": "jest"
     },
     "keywords": [
-      "mqtt",
-      "postgresql",
-      "iot",
-      "vending-machine",
-      "esp32"
+        "mqtt",
+        "postgresql",
+        "iot",
+        "vending-machine",
+        "esp32"
     ],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "mqtt": "^5.0.5",
-      "pg": "^8.11.3",
-      "pg-hstore": "^2.3.4",
-      "sequelize": "^6.33.0",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "winston": "^3.10.0"
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "exceljs": "^4.4.0",
+        "express": "^4.21.2",
+        "mqtt": "^5.0.5",
+        "pg": "^8.11.3",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.33.0",
+        "winston": "^3.10.0"
     },
     "devDependencies": {
-      "jest": "^29.7.0",
-      "nodemon": "^3.0.1",
-      "sequelize-cli": "^6.6.1"
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.1",
+        "sequelize-cli": "^6.6.1"
     }
-  }
+}
